--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 
+  background-color: #19192b;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
